# livekit-voice-agent

./: .env.example  Caddyfile  README.md  docker-compose.yml  livekit.yaml
livekit-agent/: Dockerfile  agent.py  pyproject.toml
livekit-react-app/: Dockerfile  index.html  package-lock.json  package.json
livekit-react-app/src/: App.jsx  index.css
livekit-token-server/: package.json  server.js
